tests/ui/any/trait_info_of.stderr
error[E0277]: the trait bound `dyn Trait<Assoc = &'a Box<i32>>: TryAsDynCompatible<'_>` is not satisfied
  --> $DIR/trait_info_of.rs:26:30
   |
LL |             .trait_info_of::<dyn Trait<Assoc = &'a Payload>>()
   |              -------------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the nightly-only, unstable trait `TryAsDynCompatible<'_>` is not implemented for `dyn Trait<Assoc = &'a Box<i32>>`
   |              |
   |              required by a bound introduced by this call
   |
note: required by a bound in `TypeId::trait_info_of`
  --> $SRC_DIR/core/src/any.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
